// Fitxer de definició proto pels serveis del mòdul LSTMOD.
syntax = "proto3";

package proto;

import "model_entity.proto";

option go_package = "./";

// Categoria de llistes
message LstListCategory {
  ModelEntity              base_entity = 1;
  string                   name_key = 2;
  optional string          desc_key = 3;
  optional LstListCategory parent = 4;
}
